--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,29 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.flex-container {    
+    display: flex;
+    width: 700px;
+    height: 300px;
+    justify-content: space-between;
+}
+
+.flex-container > div {    
+    background-color: #DAA520;  
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+}
+
+.flex-container div:first-child(1), .flex-container div:last-child(5) {
+    align-self: flex-start;
+}
+
+.flex-container div:nth-child(2), .flex-container div:nth-child(4) {
+    align-self: center;
+}
+
+.flex-container div:nth-child(3) {
+    align-self: flex-end;
+}
